firebase setup and signup component

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -39,6 +39,6 @@
 
 .under-construction {
   height: 100vh;
-  background: url(./assets/img/pets-1000x413.png) no-repeat center center/cover;
+  background: url(../assets/img/pets-1000x413.png) no-repeat center center/cover;
   text-align: center;
 }
