pagination works, styling of product card

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -42,3 +42,8 @@
   background: url(../assets/img/pets-1000x413.png) no-repeat center center/cover;
   text-align: center;
 }
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
