--- a/src/components/Product/product.css
+++ b/src/components/Product/product.css
@@ -4,7 +4,30 @@
   object-fit: cover;
 }
 
-.card {
-  height: 30vh;
+.product {
+  /* height: 30vh; */
+  height: 80%;
   background-color: white;
+}
+
+.product-img {
+  max-height: 40%;
+  object-fit: contain;
+  height: 200px;
+}
+
+.product-title {
+  font-size: 1.2rem;
+  height: 25%;
+  margin-bottom: 5px;
+}
+
+.product-description {
+  font-size: 1rem;
+}
+
+.product-price {
+  color: primary-color;
+  padding: 15px;
+  margin-top: 10px;
 }
