--- a/src/components/NavigationMenu/NavigationMenu.css
+++ b/src/components/NavigationMenu/NavigationMenu.css
@@ -4,6 +4,10 @@
   --text-color: #f2f2f2;
 }
 
+/* .bg-theme {
+  background-color: var(--background-color);
+} */
+
 .topnav {
   background-color: var(--background-color);
   overflow: hidden;
