Routing works partially

--- a/src/components/NavigationMenu/NavigationMenu.css
+++ b/src/components/NavigationMenu/NavigationMenu.css
@@ -8,6 +8,13 @@
   background-color: var(--background-color);
 } */
 
+.badge-notify {
+  background: #4cd964;
+  position: relative;
+  top: -12px;
+  left: -16px;
+}
+
 .topnav {
   background-color: var(--background-color);
   overflow: hidden;
