--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: KiriFont;
+  src: url("../../assets/fonts/KiriFont.ttf");
+}
+
 html {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -10,6 +15,30 @@ body {
   background-color: #6dcce8;
 }
 
-.cart-icon {
+.cart-icon,
+.login-icon {
   font-size: 2rem;
+}
+
+.hero {
+  min-height: 100vh;
+  width: 100%;
+  background: url("../../assets/img/hero3.png");
+  font-family: KiriFont;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.about {
+  min-height: 30vh;
+  background: url("../../assets/img/about.jpg");
+  font-family: KiriFont;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
