--- a/src/components/Product/product.css
+++ b/src/components/Product/product.css
@@ -13,6 +13,13 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
+  text-decoration: none;
+  transition: background-color 0.5s ease-out;
+}
+
+.product:hover {
+  background-color: rgb(238, 249, 253);
+  text-decoration: none;
 }
 
 .product-img {
