--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -23,7 +23,7 @@ body {
 .hero {
   min-height: 80vh;
   width: 100%;
-  background: url("../../assets/img/hero31.png") no-repeat center center/cover;
+  background: url("../../assets/img/hero31.webp") no-repeat center center/cover;
   font-family: KiriFont;
   display: flex;
   justify-content: center;
